<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_loading" />


    </LinearLayout>

    <ScrollView
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_passport_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_passport_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/input_passport_number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_expiration_date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_expiration_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:gravity="center"
                    android:hint="@string/input_expiration_date"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_date_of_birth_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:gravity="center"
                    android:hint="@string/input_date_of_birth"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:id="@+id/switchSodFiles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:switchMinWidth="56dp"
                android:text="Save Additional SOD (*.ef files) :"
                android:checked="true"
                android:textOff="OFF"
                android:textOn="ON"/>

            <Switch
                android:id="@+id/switchActiveAuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:switchMinWidth="56dp"
                android:text="Save Active Authentication :"
                android:checked="true"
                android:textOff="OFF"
                android:textOn="ON"/>

            <Switch
                android:id="@+id/switchSaveNFCData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:switchMinWidth="56dp"
                android:text="Save NFC On Mobile :"
                android:checked="true"
                android:textOff="OFF"
                android:textOn="ON"/>

            <TextView
                android:id="@+id/info_text"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="@string/info_scan_passport1"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <Button
                android:id="@+id/start_nfc_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/start_nfc_button" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/nfc_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:visibility="gone" />

        <ListView
            android:id="@+id/NFCResultList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:visibility="gone">

        </ListView>

    </LinearLayout>

</FrameLayout>
